--- a/docs/faststore/components/organisms/search-input.mdx
+++ b/docs/faststore/components/organisms/search-input.mdx
@@ -1,6 +1,5 @@
 ---
-title: "Search Input"
-excerpt: Responsible to receive, search and display suggestions.
+title: "Receives, searches and displays suggestions.
 sidebar_custom_props:
   image: https://vtexhelp.vtexassets.com/assets/docs/src/Hero___c73fdfe80ce87c2ccc4701c07e9d5398.png
 ---
