--- a/docs/faststore/components/organisms/shipping-simulation.mdx
+++ b/docs/faststore/components/organisms/shipping-simulation.mdx
@@ -1,12 +1,12 @@
 ---
-title: "Shipping Simulation"
-excerpt: Shipping Simulation are sliders that allows users to select a maximum and minimum price.
+title: "ShippingSimulation"
+excerpt: Sliders that allows users to select a maximum and minimum price.
 sidebar_custom_props:
   image: https://vtexhelp.vtexassets.com/assets/docs/src/PriceRange___5863b0eb4a4a8ce9a98da5c760461e61.png
 components:
   - ShippingSimulation.tsx
 ---
-This component lets customers set the `PostalCode` and see the shipping options in the `PDP`.
+The `ShippingSimulation` component lets customers set the `PostalCode` and see the shipping options in the `PDP`.
 
 ## Import
 
@@ -98,11 +98,11 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
 
 ## Props
 
-### Shipping Simulation
+### ShippingSimulation
 
 <ComponentPropsSection component="ShippingSimulation" />
 
-### Shipping SLA
+### ShippingSLA
 
 <PropsSection propsList={propsShippingSla} />
 
