--- a/docs/faststore/components/organisms/slide-over.mdx
+++ b/docs/faststore/components/organisms/slide-over.mdx
@@ -1,6 +1,6 @@
 ---
 title: "SlideOver"
-excerpt: This component represents an aditional session that complements the screen's information.
+excerpt: Represents an aditional session that complements the screen's information.
 sidebar_custom_props:
   image: https://vtexhelp.vtexassets.com/assets/docs/src/PaymentMethods___b0f344b254360daa53406cd631887adf.png
 components:
@@ -8,7 +8,7 @@ components:
   - SlideOverHeader.tsx
 ---
 
-This component represents an aditional session that complements the screen's information.
+The `SlideOver` component represents an aditional session that complements the screen's information.
 
 ## Import
 
@@ -129,11 +129,11 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
 
 ## Props
 
-### Slide Over
+### SlideOver
 
 <ComponentPropsSection component="SlideOver" />
 
-### Slide Over Header
+### SlideOverHeader
 
 <ComponentPropsSection component="SlideOverHeader" />
 
@@ -213,7 +213,7 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
 
 <SectionList grid="column">
   <SectionItem
-    title="Cart Sidebar"
+    title="CartSidebar"
     description="The CartSidebar displays the summary of items added to the cart along with detailed information, and checkout option."
     actionPath="/docs/guides/faststore/organisms-cart-sidebar"
   >
@@ -222,7 +222,7 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
     </UIProvider>
   </SectionItem>
   <SectionItem
-    title="Filter Slider"
+    title="FilterSlider"
     description="The mobile Filter view that is rendered inside a SlideOver component."
     actionPath="/docs/guides/faststore/organisms-filter-slider"
   >
