Fix "Custom Page" (2-setting-up-the-headless-cms.mdx)

--- a/docs/faststore/docs/headless-cms/2-setting-up-the-headless-cms.mdx
+++ b/docs/faststore/docs/headless-cms/2-setting-up-the-headless-cms.mdx
@@ -86,8 +86,8 @@ If your project already includes any of the following files: `content-types.json
   ```json cms/faststore/content-types.json
   [
     {
-      "id": "customPage",
-      "name": "Custom Page",
+      "id": "landingPage",
+      "name": "Landing Page",
       "configurationSchemaSets": [
         {
           "name": "Settings",
