--- a/docs/faststore/components/organisms/search-input.mdx
+++ b/docs/faststore/components/organisms/search-input.mdx
@@ -1,11 +1,11 @@
 ---
 title: "Search Input"
-excerpt: "Receives, searches, and displays suggestions.
+excerpt: "Receives, searches, and displays suggestions."
 sidebar_custom_props:
   image: https://vtexhelp.vtexassets.com/assets/docs/src/Hero___c73fdfe80ce87c2ccc4701c07e9d5398.png
 ---
 
-The `SearchInput` is responsible to receive, search and display suggestions. This component is part of the [Search](https://developers.vtex.com/docs/guides/faststore/feature-search) feature.
+The `SearchInput` is responsible for receiving, searching, and displaying suggestions. This component is part of the [Search](https://developers.vtex.com/docs/guides/faststore/feature-search) feature.
 
 ## Import
 
