--- a/docs/faststore/docs/customization/building-sections/override-use-cases/adding-more-icon-options-to-the-alert-component.mdx
+++ b/docs/faststore/docs/customization/building-sections/override-use-cases/adding-more-icon-options-to-the-alert-component.mdx
@@ -17,9 +17,9 @@ This guide illustrates a common use case for [`getOverriddenSection`](https://de
   | `Bell`                  | <IconComponent icon={<Icon name="Bell" />} name="Bell" />                 |
   | `BellRinging`           | <IconComponent icon={<Icon name="BellRinging" />} name="BellRinging" /> |
   | `Checked`               | <IconComponent icon={<Icon name="Checked" />} name="Checked" />          |
-  | `Info`                  | <IconComponent icon={<Icon name="Checked" />} name="Icon" />                |
-  | `Truck`                 | <IconComponent icon={<Icon name="Checked" />} name="Truck" />             |
-  | `User`                  | <IconComponent icon={<Icon name="Checked" />} name="User" />             |
+  | `Info`                  | <IconComponent icon={<Icon name="Info" />} name="Info" />                |
+  | `Truck`                 | <IconComponent icon={<Icon name="Truck" />} name="Truck" />             |
+  | `User`                  | <IconComponent icon={<Icon name="User" />} name="User" />             |
 
 - You want to allow Headless CMS editors to select in the Alert section from a wider range of icons supported by the `@faststore/ui` [iconography](https://developers.vtex.com/docs/guides/faststore/reference-icons#usage) library.
 
