--- a/docs/faststore/docs/customization/building-sections/override-use-cases/adding-more-icon-options-to-the-alert-component.mdx
+++ b/docs/faststore/docs/customization/building-sections/override-use-cases/adding-more-icon-options-to-the-alert-component.mdx
@@ -10,7 +10,7 @@ This guide illustrates a common use case for [`getOverriddenSection`](https://de
 
 - The native [Alert](https://developers.vtex.com/docs/guides/faststore/building-sections-list-of-native-sections#alert) section provides the following icon options by default:
 
-![hcms-icon-options](https://vtexhelp.vtexassets.com/assets/docs/src/hcms-icons___2493178917df6859823a6948e64152c0.gif)
+![hcms-icon-options](https://cdn.jsdelivr.net/gh/vtexdocs/dev-portal-content@main/images/hcms-icons.gif)
 
   | Alert default icon name | Icon                                                                                                                           |
   | ----------------------- | ------------------------------------------------------------------------------------------------------------------------------ |
