--- a/docs/faststore/docs/customization/building-sections/experimental-exports-hooks-and-components.mdx
+++ b/docs/faststore/docs/customization/building-sections/experimental-exports-hooks-and-components.mdx
@@ -49,7 +49,7 @@ All experimental [hooks and components](#list-of-hooks-and-components) are suffi
 Explore the features of the experimental hooks and the `Image_unstable` component.
 
 - [Hooks](#hooks)
-- [`Image_unstable`](#image)
+- [`Image_unstable`](#image_unstable-component)
 
 ### Hooks
 
