Apply suggestions from code review
Co-authored-by: Carolina Menezes <60782333+carolinamenezes@users.noreply.github.com>

--- a/docs/faststore/docs/customization/building-sections/experimental-exports-hooks-and-components.mdx
+++ b/docs/faststore/docs/customization/building-sections/experimental-exports-hooks-and-components.mdx
@@ -13,7 +13,7 @@ All experimental [hooks and components](#list-of-hooks-and-components) are suffi
 ## Instructions
 
 1. Open your store project in a code editor, then open the component or section file where you want to import the hook or component.
-2. Declare the hook or component into your custom component file.
+2. Import the hook or component into your custom component file.
 
     ```tsx
     import { use{ComponentName}_unstable as use{ComponentName} } from '@faststore/core/experimental'
