add a disclaimer about `{ComponentName}`

--- a/docs/faststore/docs/customization/building-sections/experimental-exports-hooks-and-components.mdx
+++ b/docs/faststore/docs/customization/building-sections/experimental-exports-hooks-and-components.mdx
@@ -19,6 +19,8 @@ All experimental [hooks and components](#list-of-hooks-and-components) are suffi
     import { use{ComponentName}_unstable as use{ComponentName} } from '@faststore/core/experimental'
     ```
 
+    > ⚠️ Change the `{ComponentName}` to the name of the component you want to import, for example `useCartToggleButton`.
+
 3. Incorporate the imported hook or component into your custom component logic. In the following example, the `useCartToggleButton_unstable` hook enables toggling the cart.
 
     ```tsx mark=3
