Update extending-api-schema.mdx - Fix resolver name in the step 3

--- a/docs/faststore/docs/api-extensions/extending-api-schema.mdx
+++ b/docs/faststore/docs/api-extensions/extending-api-schema.mdx
@@ -99,7 +99,7 @@ Refer to the next step to create the resolvers to provide the actual data to the
 
 Now, you'll create a resolver to define how the new `customData` field should be resolved, specifically what data or logic should be associated with it when queried.
 
-1.  Create a new `<resolver>.graphql` file inside the `vtex/resolvers` folder. Let's continue using the [StoreProduct](https://v1.faststore.dev/reference/api/objects#storeproduct) type
+1.  Create a new `<resolver>.ts` file inside the `vtex/resolvers` folder. Let's continue using the [StoreProduct](https://v1.faststore.dev/reference/api/objects#storeproduct) type
     example. That means the name of the file will be `product.ts`.
 
         > ℹ️ The organization inside this folder is flexible. You can create multiple resolver files or group them all together in one file.
