Apply suggestions from code review
Co-authored-by: Fanny Chien <fanny.chien@vtex.com>

--- a/docs/faststore/docs/reference/project-structure/updating-the-cli-package-version.mdx
+++ b/docs/faststore/docs/reference/project-structure/updating-the-cli-package-version.mdx
@@ -4,7 +4,7 @@ title: "Updating the '@fastore/cli' package version"
 
 If you need to update the [`@fastore/cli`](https://developers.vtex.com/docs/guides/faststore/project-structure-overview#packagejson) package, follow these instructions.
 
-> ⚠️ Since the publication of [this release note](https://developers.vtex.com/updates/release-notes/2024-09-11-faststore-cli-dependency), the `@faststore/cli` package now depends on the `@faststore/core` package. Before updating the `@faststore/cli` package, make sure to check if this package is already listed in your dependencies. If not, check out the [release note](https://developers.vtex.com/updates/release-notes/2024-09-11-faststore-cli-dependency) related to this change.
+> ⚠️ Since the publication of [this release note](https://developers.vtex.com/updates/release-notes/2024-09-11-faststore-cli-dependency), the `@faststore/core` package now depends on the `@faststore/cli` package. Before updating the `@faststore/cli` package, make sure to check if this package is already listed in your dependencies. If not, check out the [release note](https://developers.vtex.com/updates/release-notes/2024-09-11-faststore-cli-dependency) related to this change.
 
 1. Open your FastStore codebase in the code editor of your preference.
 
