--- a/docs/faststore/docs/getting-started/1-onboarding/overview.mdx
+++ b/docs/faststore/docs/getting-started/1-onboarding/overview.mdx
@@ -8,10 +8,9 @@ This document provides an overview of the FastStore WebOps app, a tool designed 
 
 <Steps>
 
-### Request the app's installation
+### Install the app
 
-Please open a ticket with the [VTEX support team](https://help.vtex.com/support) to request the installation of the FastStore WebOps app.
-
+Make sure you installed the app to your store account by following the instructions in [Install the FastStore WebOps app](https://developers.vtex.com/docs/guides/faststore/getting-started-requirements#install-the-fastStore-webops-app).
 
 ### Create your store Catalog
 
