--- a/docs/faststore/docs/getting-started/requirements.mdx
+++ b/docs/faststore/docs/getting-started/requirements.mdx
@@ -97,9 +97,12 @@ If you are using a different major version and want to migrate, please [open a t
 
 ## Install the FastStore WebOps app
 
-The [FastStore WebOps app](https://developers.vtex.com/docs/guides/faststore/1-onboarding-overview) is the first step for you to create and set up a FastStore project. It also provides you a clear view of your website's deployments and performance.
+The [FastStore WebOps app](https://developers.vtex.com/docs/guides/faststore/1-onboarding-overview) is the first step for you to create, set up and manage your FastStore project. It also provides deployment and performance insights your website's.
 
-To install the app, follow these steps:
+To install the app, follow these steps.
+
+> ⚠️ The FastStore WebOps app only works in stores using the [Edition Store](https://developers.vtex.com/docs/guides/vtex-io-documentation-edition-app#list-of-native-edition-apps). If your store is on the Edition Business, also known as using the [Legacy CMS Portal]() technology, make sure to [open a support ticket](https://help-tickets.vtex.com/smartlink/sso/login/zendesk) to change it to the Edition Store.
+Once you have changed the edition, follow the instructions on this [requirements guide](https://developers.vtex.com/docs/guides/faststore/getting-started-requirements#install-the-vtex-io-cli-on-your-machine).
 
 1. In a terminal, log into your VTEX account by running the following:
 
