--- a/docs/faststore/docs/getting-started/best-practices-for-writing-documentation.mdx
+++ b/docs/faststore/docs/getting-started/best-practices-for-writing-documentation.mdx
@@ -69,7 +69,7 @@ To help you define the documentation context, see the checklist below:
 <details>
 <summary>What should someone be able to do or understand after reading this article? Choose one or two tasks or concepts that the content will discuss. Template example:
 
-"Create a guide on {add the guide’s purpose}. The guide should emphasize clarity, structure, and user-friendliness. It's intended for add the guide’s audience"
+"Create a guide on add the guide’s purpose. The guide should emphasize clarity, structure, and user-friendliness. It's intended for add the guide’s audience"
 </summary>
 
 </details>
