--- a/docs/faststore/docs/getting-started/best-practices-for-writing-documentation.mdx
+++ b/docs/faststore/docs/getting-started/best-practices-for-writing-documentation.mdx
@@ -30,10 +30,10 @@ To help you define the audience, answer the following questions:
 
 At VTEX, we have the following audience as our documentation readers:
 
-| Audience type | Description | Documentation type |
-| ------------- |------------ |------------------- |
-| Beginner | New to ecommerce operations and VTEX, with little to no prior experience. Their main challenge is adapting to the platform and the ecommerce context. | <ol><li>[Conceptual guides](LINK)</li><li>[Tutorials](LINK)</li><li>[Announcements](LINK)</li></ol> |
-| Operational | Handles daily ecommerce tasks, such as SKU registration and promotion management. Familiar with the ecommerce context but may encounter problems that cannot be solved alone. | <ol><li>[Conceptual guides](LINK)</li> <li>[Tutorials](LINK)</li><li>[How-to guides](LINK).</li><li>[Troubleshooting](LINK)</li><li>[Known issues](LINK)</li><li>[Announcements](LINK)</li><li>[Release notes](LINK)</li></ol> |
+| Audience type    | Description                                                                                                                                                                                                                                                                                                         | Documentation type                                                                                                                                                                                                                                                                                 |
+| ---------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| Beginner         | New to ecommerce operations and VTEX, with little to no prior experience. Their main challenge is adapting to the platform and the ecommerce context.                                                                                                                                                               | <ol><li>[Conceptual guides](LINK)</li><li>[Tutorials](LINK)</li><li>[Announcements](LINK)</li></ol>                                                                                                                                                                                                |
+| Operational      | Handles daily ecommerce tasks, such as SKU registration and promotion management. Familiar with the ecommerce context but may encounter problems that cannot be solved alone.                                                                                                                                       | <ol><li>[Conceptual guides](LINK)</li> <li>[Tutorials](LINK)</li><li>[How-to guides](LINK).</li><li>[Troubleshooting](LINK)</li><li>[Known issues](LINK)</li><li>[Announcements](LINK)</li><li>[Release notes](LINK)</li></ol>                                                                     |
 | Highly Technical | Builds or integrates technical solutions with VTEX. Works on store implementations, integrations with partner systems via VTEX APIs, or develops applications with VTEX IO. Requires in-depth technical documentation that shows the characteristics of all our features and indicates how to solve business needs. | <ol><li>[Conceptual guides](LINK)</li><li>[Tutorials](LINK)</li><li>[How-to guides](LINK).</li><li>[API reference guides](LINK)</li><li>[Troubleshooting](LINK)</li><li>[App development](LINK)</li><li>[Known issues](LINK)</li><li>[Announcements](LINK)</li><li>[Release notes](LINK)</li></ol> |
 
 ### Checklist to define the documentation objectives
@@ -45,9 +45,9 @@ To help you define the documentation context, see the checklist below:
 <summary>
 
 <ol>
-    <li>Beginner</li>
-    <li>Operational</li>
-    <li>Developer</li>
+  <li>Beginner</li>
+  <li>Operational</li>
+  <li>Developer</li>
 </ol>
 
 </summary>
@@ -67,8 +67,7 @@ To help you define the documentation context, see the checklist below:
 
 <CheckboxField label="Learning objective" id="checkboxfield-setting-up" />
 <details>
-<summary>What should someone be able to do or understand after reading this article? Choose one or two tasks or concepts that the content will discuss.
-</summary>
+<summary>Test</summary>
 
 </details>
 
