--- a/docs/faststore/docs/getting-started/best-practices-for-writing-documentation.mdx
+++ b/docs/faststore/docs/getting-started/best-practices-for-writing-documentation.mdx
@@ -55,14 +55,12 @@ To help you define the documentation context, see the checklist below:
 
 <CheckboxField label="Learning category" id="checkboxfield-onboarding" />
 <details>
-<summary>
+<summary>test</summary>
 <ol>
     <li>Awareness - The audience can describe or paraphrase a concept or feature.</li>
     <li>Comprehension - The audience can understand a concept to support decision-making.</li>
     <li>Applicable skill - The audience can follow instructions to complete a task.</li>
 </ol>
-</summary>
-
 </details>
 
 <CheckboxField label="Learning objective" id="checkboxfield-setting-up" />
