--- a/docs/faststore/docs/getting-started/requirements.mdx
+++ b/docs/faststore/docs/getting-started/requirements.mdx
@@ -101,7 +101,7 @@ The [FastStore WebOps app](https://developers.vtex.com/docs/guides/faststore/1-o
 
 To install the app, follow these steps.
 
-> ⚠️ The FastStore WebOps app only works in stores using the [Edition Store](https://developers.vtex.com/docs/guides/vtex-io-documentation-edition-app#list-of-native-edition-apps). If your store is on the Edition Business, also known as using the [Legacy CMS Portal]() technology, make sure to [open a support ticket](https://help-tickets.vtex.com/smartlink/sso/login/zendesk) to change it to the Edition Store.
+> ⚠️ The FastStore WebOps app only works in stores using the [Edition Store](https://developers.vtex.com/docs/guides/vtex-io-documentation-edition-app#list-of-native-edition-apps). If your store is on the Edition Business, also known as using the [Legacy CMS Portal](https://help.vtex.com/es/tracks/cms--2YcpgIljVaLVQYMzxQbc3z/1oN446gRGcR2s70RvBCAmj) technology, make sure to [open a support ticket](https://help-tickets.vtex.com/smartlink/sso/login/zendesk) to change it to the Edition Store.
 Once you have changed the edition, follow the instructions on this [requirements guide](https://developers.vtex.com/docs/guides/faststore/getting-started-requirements#install-the-vtex-io-cli-on-your-machine).
 
 1. In a terminal, log into your VTEX account by running the following:
