Apply suggestions from code review
Co-authored-by: Fanny Chien <fanny.chien@vtex.com>

--- a/docs/faststore/docs/getting-started/requirements.mdx
+++ b/docs/faststore/docs/getting-started/requirements.mdx
@@ -97,7 +97,7 @@ If you are using a different major version and want to migrate, please [open a t
 
 ## Install the FastStore WebOps app
 
-The [FastStore WebOps app](https://developers.vtex.com/docs/guides/faststore/1-onboarding-overview) is the first step for you to create, set up and manage your FastStore project. It also provides deployment and performance insights your website's.
+The [FastStore WebOps app](https://developers.vtex.com/docs/guides/faststore/1-onboarding-overview) is the first step for you to create, set up and manage your FastStore project. It also provides deployment and performance insights of your website.
 
 To install the app, follow these steps.
 
