Fixed WebOps mention

--- a/docs/faststore/docs/getting-started/1-onboarding/starting-the-project.mdx
+++ b/docs/faststore/docs/getting-started/1-onboarding/starting-the-project.mdx
@@ -14,7 +14,7 @@ Now that you have an [overview of the app](https://developers.vtex.com/docs/guid
 
 ### Step 1: Setting up the project
 
-1. Open the Admin and access the FastStore Onboarding app.
+1. Open the VTEX Admin and access **Storefront > FastStore WebOps**.
 2. Click `Start Project`.
 3. In the **Setup & Create Project** page, configure the following options for your store:
 
