Apply suggestions from code review
Co-authored-by: Carolina Menezes <60782333+carolinamenezes@users.noreply.github.com>

--- a/docs/faststore/docs/getting-started/1-onboarding/overview.mdx
+++ b/docs/faststore/docs/getting-started/1-onboarding/overview.mdx
@@ -8,9 +8,9 @@ This document provides an overview of the FastStore WebOps app, a tool designed 
 
 <Steps>
 
-### Install the app
+### Install the FastStore WebOps app
 
-Make sure you installed the app to your store account by following the instructions in [Install the FastStore WebOps app](https://developers.vtex.com/docs/guides/faststore/getting-started-requirements#install-the-faststore-webops-app).
+Make sure you have installed the FastStore WebOps app to your store account by following the instructions in [Install the FastStore WebOps app](https://developers.vtex.com/docs/guides/faststore/getting-started-requirements#install-the-faststore-webops-app).
 
 ### Create your store Catalog
 
