Setting up the project: changed filename to `discovery`

--- a/docs/faststore/docs/getting-started/2-setting-up-the-project.mdx
+++ b/docs/faststore/docs/getting-started/2-setting-up-the-project.mdx
@@ -116,7 +116,7 @@ To activate Developer Mode, refer to Microsoft's official guide on [Enabling you
 
 > ℹ️ Note that your store configuration was already set during the [FastStore Onboarding](https://developers.vtex.com/docs/guides/faststore/1-onboarding-overview). Therefore, there is no need to connect your project to your VTEX account.
   
-If you want to review these configurations, you can access the `faststore.config.js` file in the root directory of your project's repository.
+If you want to review these configurations, you can access the `discovery.config.js` file in the root directory of your project's repository.
 
 ---
 
@@ -237,9 +237,9 @@ Let's make the first level of customization which updates the store's [theme](ht
     }
     ```
 
-3. Open the `faststore.config.js` file and change the `theme` from `custom-theme` to `soft-blue`.
+3. Open the `discovery.config.js` file and change the `theme` from `custom-theme` to `soft-blue`.
 
-    ```js faststore.config.js
+    ```js discovery.config.js
       theme: 'soft-blue',
     ```
 
