Themes overview - changed filename to `discovery.config`

--- a/docs/faststore/docs/reference/themes/overview.mdx
+++ b/docs/faststore/docs/reference/themes/overview.mdx
@@ -77,8 +77,8 @@ By default, every FastStore project comes with the [Brandless theme](https://dev
 }
 ```
 
-3. Go to `faststore.config.js` and change the `theme` from `custom-theme` to your file's name, for example:
+3. Go to `discovery.config.js` and change the `theme` from `custom-theme` to your file's name, for example:
 
-```js faststore.config.js
+```js discovery.config.js
 theme: 'my-theme',
 ```
