Soft blue and midnight: changed filename to `discovery`

--- a/docs/faststore/docs/reference/themes/midnight.mdx
+++ b/docs/faststore/docs/reference/themes/midnight.mdx
@@ -168,9 +168,9 @@ A darkmode theme for your storefront.
 }
 ```
 
-3. Go to `faststore.config.js` and change the `theme` to `midnight`:
+3. Go to `discovery.config.js` and change the `theme` to `midnight`:
 
-```js filename="faststore.config.js"
+```js filename="discovery.config.js"
 theme: 'midnight',
 ```
 
