--- a/docs/faststore/docs/reference/themes/soft-blue.mdx
+++ b/docs/faststore/docs/reference/themes/soft-blue.mdx
@@ -92,9 +92,9 @@ excerpt: "A basic theme for your storefront."
 }
 ```
 
-3. Go to `faststore.config.js` and change the `theme` to `soft-blue`:
+3. Go to `discovery.config.js` and change the `theme` to `soft-blue`:
 
-```js filename="faststore.config.js"
+```js filename="discovery.config.js"
 theme: 'soft-blue',
 ```
 
