Configuration options for faststore.config.js review

--- a/docs/faststore/docs/reference/project-structure/config-options.mdx
+++ b/docs/faststore/docs/reference/project-structure/config-options.mdx
@@ -1,14 +1,12 @@
 ---
-title: "Configuration options for faststore.config.js"
+title: "Configuration options for discovery.config.js"
 slug: faststore-config-options
 ---
 
-> ⚠️ This documentation is currently under development.
+The `discovery.config.js` file is the central configuration file for managing store settings.
+It allows you, for example, to set SEO settings, define the store ID, select a theme, and set up custom Cypress tests. Check out the example for this file: [`discovery.config.js` sample code](https://github.com/vtex-sites/starter.store/blob/main/discovery.config.js).
 
-The `faststore.config.js` file is the central configuration file for managing store settings.
-It allows you, for example, to set SEO settings, define the store ID, select a theme, and set up custom Cypress tests. Check out the example for this file: [`faststore.config.js` sample code](https://github.com/vtex-sites/starter.store/blob/main/faststore.config.js).
-
-Explore more in-depth specific configuration options for `faststore.config.js`:
+Explore more in-depth specific configuration options for `discovery.config.js`:
 
 <Flex>
 
