--- a/docs/faststore/docs/headless-cms/multiple-page-template.mdx
+++ b/docs/faststore/docs/headless-cms/multiple-page-template.mdx
@@ -101,9 +101,9 @@ For example:
 
 #### Using Rewrites with PLP template
 
-FastStore allows you to create custom routes using [Next.js rewrites](https://nextjs.org/docs/app/api-reference/next-config-js/rewrites). It is possible to enable the multiple page template feature for the custom route as well by adding your rewrites function into the `faststore.config.js` file as suggested in the [Next.js documentation](https://nextjs.org/docs/app/api-reference/next-config-js/rewrites):
+FastStore allows you to create custom routes using [Next.js rewrites](https://nextjs.org/docs/app/api-reference/next-config-js/rewrites). It is possible to enable the multiple page template feature for the custom route as well by adding your rewrites function into the `discovery.config.js` file as suggested in the [Next.js documentation](https://nextjs.org/docs/app/api-reference/next-config-js/rewrites):
 
-1. Add your rewrite function to faststore.config.js:
+1. Add your rewrite function to discovery.config.js:
 
 ```js
 async rewrites() {
