Adding Installment Information in the Product Details Page review

--- a/docs/faststore/docs/api-extensions/api-extensions-use-cases/adding-installment-information-in-the-product-details-page.mdx
+++ b/docs/faststore/docs/api-extensions/api-extensions-use-cases/adding-installment-information-in-the-product-details-page.mdx
@@ -222,7 +222,7 @@ For a more user-friendly display, you can format the installment values to inclu
 <CH.Code>
 
 ```ts priceFormatter.ts
-import FaststoreConfig from "../../faststore.config.js";
+import FaststoreConfig from "../../discovery.config.js";
 
 export const priceFormatter = (value: number) => {
   return value.toLocaleString(FaststoreConfig.session.locale, {
